feat: add resource group tags support for manual Azure CLI mode
- Add --azure-rg-tags-file CLI argument to accept resource group tags from az group list
- Enhance load_resources_from_json_file() with intelligent tag handling:
  * Primary: uses resource group tags from --azure-rg-tags-file when provided
  * Fallback: uses individual resource tags when no RG tags file is available
- Add _load_resource_group_tags_from_file() helper function to parse RG tags
- Update configuration to support azure_rg_tags_file parameter
- Update manual mode instructions with resource group export command
- Fix issue where rg_tags column was empty in manual CLI mode
- Update README with enhanced tag handling documentation
- Bump version to 1.1.3

--- a/config.example.json
+++ b/config.example.json
@@ -10,6 +10,7 @@
   "azure_creds_file": null,
   "azcli_manually": false,
   "azure_input_file": null,
+  "azure_rg_tags_file": null,
   "resource_mode": "primary",
   "cache_ttl": 60,
   "no_cache": false,
